[gd_scene load_steps=5 format=1]

[ext_resource path="res://themes/menu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/menu/achievements.gd" type="Script" id=2]
[ext_resource path="res://assets/menu/bg2.png" type="Texture" id=3]
[ext_resource path="res://assets/achievements/plushlover.png" type="Texture" id=4]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -200.0
margin/top = 0.0
margin/right = -200.0
margin/bottom = 0.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]

visibility/opacity = 0.95
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 500.0
margin/top = 20.0
margin/right = 500.0
margin/bottom = 20.0
custom_constants/separation = 20
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 920.0
margin/bottom = 40.0
text = "Achievements"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 60.0
margin/right = 920.0
margin/bottom = 980.0
tab_align = 1
tabs_visible = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="general" type="ScrollContainer" parent="VBoxContainer/TabContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 58.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = true
scroll/vertical = true
__meta__ = {
"_edit_lock_": true
}

[node name="general" type="VBoxContainer" parent="VBoxContainer/TabContainer/general"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 912.0
margin/bottom = 858.0
custom_constants/separation = 140
alignment = 0

[node name="àgarderpourlesparamètres" type="Control" parent="VBoxContainer/TabContainer/general/general"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/general/general/àgarderpourlesparamètres"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 10.0
margin/top = 0.0
margin/right = -907.0
margin/bottom = 120.0
custom_constants/separation = 20
alignment = 0

[node name="TextureFrame" type="TextureFrame" parent="VBoxContainer/TabContainer/general/general/àgarderpourlesparamètres/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 120.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/general/general/àgarderpourlesparamètres/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 140.0
margin/top = 0.0
margin/right = 897.0
margin/bottom = 120.0
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TabContainer/general/general/àgarderpourlesparamètres/HBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 757.0
margin/bottom = 40.0
bbcode/enabled = true
bbcode/bbcode = "Fusce vitae. "
visible_characters = -1

[node name="RichTextLabel1" type="RichTextLabel" parent="VBoxContainer/TabContainer/general/general/àgarderpourlesparamètres/HBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 757.0
margin/bottom = 80.0
bbcode/enabled = true
bbcode/bbcode = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae. "
visible_characters = -1

[node name="story" type="ScrollContainer" parent="VBoxContainer/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = true
scroll/vertical = true

[node name="story" type="VBoxContainer" parent="VBoxContainer/TabContainer/story"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 912.0
margin/bottom = 884.0
custom_constants/separation = 140
alignment = 0

[node name="secret" type="ScrollContainer" parent="VBoxContainer/TabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 32.0
margin/right = 4.0
margin/bottom = 4.0
scroll/horizontal = true
scroll/vertical = true

[node name="secret" type="VBoxContainer" parent="VBoxContainer/TabContainer/secret"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 912.0
margin/bottom = 884.0
custom_constants/separation = 140
alignment = 0

[node name="returnButton" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 402.0
margin/top = 1000.0
margin/right = 517.0
margin/bottom = 1040.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="VBoxContainer/returnButton" to="." method="_on_returnButton_pressed"]


